--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Happy Birthday, meri Jaan! 😘😘😘
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the <js class="prototypes">May the  always be with you</js> always be with you! ;)</h5>
+                <h5 id="wishText">HUMESHA KHUSH RAHO MY LOVE 😘<js class="prototypes"></js></h5>
             </div>
         </div>
 
