--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    😘✨ Happy Birthday, My Love! 😘❤️
+                  ❤️✨ Happy Birthday, My Love!❤️
 
-Meri pyari Eshu,
 
-Aaj sirf tumhara birthday nahi, balki hamari mohabbat ke ek aur khoobsurat saal ka din hai. 😘 6 saal ho gaye tumse mohabbat karte, tumhari muskurahat mein jeete, aur tumhari baton mein kho jate. Yeh safar har din aur bhi haseen hota ja raha hai, aur main hamesha chahunga ke yeh mohabbat yunhi barhti rahe. ❤️
+
+Meri pyari Eshu,✨❤️
+
+Aaj sirf tumhara birthday nahi, balki hamari mohabbat ke ek aur khoobsurat saal ka din hai. ❤️ 6 saal ho gaye tumse mohabbat karte✨, tumhari muskurahat mein jeete, aur tumhari baton mein kho jate. Yeh safar har din aur bhi haseen hota ja raha hai, aur main hamesha chahunga ke yeh mohabbat yunhi barhti rahe. ❤️
 
 Tum meri zindagi ka wo hissa ho jo har din khoobsurat banata hai. Allah tumhari har dua qubool kare, tumhe har wo khushi de jo tumhari dil ki gehraiyon mein chhupi hai. Tumhari hansi meri duniya ki sabse pyari awaaz hai, aur main chahunga ke yeh hamesha yunhi rahe.
 
-Mujhe tumse bepanah mohabbat hai, aur yeh mohabbat hamesha barhti rahegi. Tum meri duniya ho, meri jaan ho, aur hamesha meri rahogi. 😘😘
+Mujhe tumse bepanah mohabbat hai, aur yeh mohabbat hamesha barhti rahegi. Tum meri duniya ho, meri jaan ho, aur hamesha meri rahogi. ❤️✨
 
-Happy Birthday, meri Jaan! 😘😘😘
+Happy Birthday, meri Jaan! ❤️✨
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -79,7 +81,7 @@ Happy Birthday, meri Jaan! 😘😘😘
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">HUMESHA KHUSH RAHO MY LOVE 😘<js class="prototypes"></js></h5>
+                <h5 id="wishText">HUMESHA KHUSH RAHO MY LOVE ✨<js class="prototypes"></js></h5>
             </div>
         </div>
 
