--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ Happy Birthday, meri Jaan! ❤️✨
             <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">HUMESHA KHUSH RAHO MY LOVE ✨<js class="prototypes"></js></h5>
+                <h3 class="wish-hbd">Happy  Birthday!</h3>
+                <h5 id="wishText"><js class="prototypes">>HUMESHA KHUSH RAHO MY LOVE ✨</js></h5>
             </div>
         </div>
 
